fix(ui): prevent layout shift on modal open using scrollbar-gutter

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,7 @@
   html {
     @apply bg-base-950 font-sans leading-[1.6rem] text-base-50;
     scroll-behavior: smooth;
+    scrollbar-gutter: stable;
   }
 
   ::-webkit-scrollbar {
